--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
     "inquirer-press-to-continue": "^1.1.4",
     "mysql2": "^2.2.5"
